# SDL2

./: .gitignore  README.md
class_pr/: Readme.md  fffffCMakeLists.txt
class_pr/include/: gamestate.h  map.h  state.h  statemanager.h  window.h
class_pr/src/: gamestate.cpp  main.cpp  map.cpp  state.cpp  statemanager.cpp  window.cpp
clip/: CMakeLists.txt
clip/src/: main.cpp
collision/: CMakeLists.txt
collision/src/: main.cpp
event/: CMakeLists.txt
event/include/: res_path.h
event/src/: main.cpp
image_load/: CMakeLists.txt
image_load/include/: cleanup.h
image_load/src/: main.cpp
learn_wes/src/: color.cpp  color.h  config.h  configr_assign.h  controller_base.cpp  draw.cpp  draw.h  draw_manager.cpp  draw_manager.h  events.cpp  game_config.cpp  game_config.h  game_launcher.cpp  main.cpp  mouse_events.cpp  mouse_events.h  mouse_handler_base.cpp  mouse_handler_base.h  picture.cpp  picture.h  play_controller.cpp  resources.h  video.cpp  video.h
learn_wes/src/gui/: gui.cpp  gui.h
learn_wes/src/gui/auxiliary/: find_widget.h
learn_wes/src/gui/core/: gui_definition.cpp  layout_exception.h  static_registry.h  timer.cpp  timer.h  top_level_drawable.cpp  widget_definition.cpp  widget_definition.h  window_builder.cpp  window_builder.h
learn_wes/src/gui/dialogs/: message.cpp  message.h  modal_dialog.cpp
learn_wes/src/gui/widgets/: button.cpp  button.h  clickable_item.h  container_base.cpp  container_base.h  event_executor.h  grid.cpp  grid.h  grid_private.h  helper.h  (+12 more)
learn_wes/src/map/: location.cpp
learn_wes/src/scripting/: lua_ptr.h
learn_wes/src/sdl/: input.cpp  point.cpp  rect.h  surface.cpp  texture.cpp  texture.h  window.cpp
learn_wes/src/utils/: const_clone.h
libtmx/: CMakeLists.txt  libxm2编译整理.docx
libtmx/src/: main.cpp
mixer/: CMakeLists.txt
mixer/cmake/: FindSDL2_mixer.cmake
mixer/src/: main.cpp
three_kingdoms/: CMakeLists.txt  cygwin_cmaketxt.txt  cygwin下的环境部署.docx  notebook.txt  wes代码切换.txt  ~$gwin下的环境部署.docx
three_kingdoms/cmake/: FindSDL2_mixer.cmake
three_kingdoms/include/: base.h  camera.h  cleanup.h  config.h  config_attribute_value.hhh  config_cache.h  configr_assign.h  controller_base.h  entity.h  entitymanager.h  events.h  exceptions.h  game_launcher.h  gamestate.h  input.h  location.h  map.h  mouse_events.h  physics.h  play_controller.h  rect.h  state.h  statemanager.h  vectors.h  video.h  window.h
three_kingdoms/resource/tiles/: three_kingdom.tmx  tile.tsx
three_kingdoms/src/: camera.cpp  config.cpp  config_attribute_value.ppp  config_cache.cpp  controller_base.cpp  draw.cpp  draw.h  draw_manager.cpp  draw_manager.h  entity.cpp  entitymanager.cpp  events.cpp  game_launcher.cpp  gamestate.cpp  input.cpp  input_ws.cpp  main.cpp  map.cpp  math.cpp  motionstate.cpp  mouse_events.cpp  mouse_handler_base.cpp  mouse_handler_base.h  physics.cpp  play_controller.cpp  rect_ws.cpp  resources.cpp  state.cpp  statemanager.cpp  timer.cpp  video.cpp  window.cpp
three_kingdoms/src/gui/: gui.cpp
three_kingdoms/src/gui/core/: gui_definition.cpp  gui_definition.h  register_widget.h  static_registry.cpp  static_registry.h  timer.cpp  top_level_drawable.cpp  top_level_drawable.h  widget_definition.cpp  widget_definition.h  window_builder.cpp  window_builder.h
three_kingdoms/src/gui/core/event/: dispatcher.cpp  dispatcher.h  dispatcher_private.h  distributor.cpp  distributor.h  handler.cpp  message.h
three_kingdoms/src/gui/dialogs/: message.cpp  message.h  modal_dialog.cpp  modal_dialog.h
three_kingdoms/src/gui/widgets/: container_base.cpp  container_base.h  event_executor.h  helper.cpp  helper.h  panel.cpp  panel.h  settings.h  styled_widget.cpp  styled_widget.h  widget.cpp  widget.h  window.cpp  window.h
three_kingdoms/src/preferences/: preferences.cpp  preferences.h
three_kingdoms/src/sdl/: rect.cpp  surface.h  userevent.h  window.h
(+7 files in other folders)
